--- a/mobile/app.json
+++ b/mobile/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#D73035"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
